k8s architecture/k8s implementation with Ingress only/jitsi-prosody.yaml
---
### Create service for jitsi-prosody
apiVersion: v1
kind: Service
metadata:
  name: prosody
  namespace: jitsi-meet
  labels:
    app: jitsi-meet
    component: prosody-service
spec:
  ports:
    - name: "5222-tcp"
      port: 5222
      targetPort: 5222
    - name: "5280-tcp"
      port: 5280
      targetPort: 5280
    - name: "5347-tcp"
      port: 5347
      targetPort: 5347
  selector:
    component: prosody
---
### Deployment for XMPP server (prosody)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  namespace: jitsi-meet
  labels:
    app: jitsi-meet
    component: prosody
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: prosody
  template:
    metadata:
      labels:
        component: prosody
    spec:
      containers:
        - name: prosody
          image: jitsi/prosody:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5222
              protocol: TCP
            - containerPort: 5269
              protocol: TCP
            - containerPort: 5280
              protocol: TCP
            - containerPort: 5347
              protocol: TCP
