k8s architecture/k8s implementation with Ingress only/jitsi-web.yaml
---
### Creates jitsi-meet namespace
apiVersion: v1
kind: Namespace
metadata:
  name: jitsi-meet
  labels:
    app: jitsi-meet
    component: jitsi-namespace
---
### Create service for jitsi-web
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: jitsi-meet
  labels:
    app: jitsi-meet
    component: web-service
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
    - name: "https"
      port: 443
      targetPort: 443
  selector:
    component: jitsi
---
### Deployment for jitsi-web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi
  namespace: jitsi-meet
  labels:
    app: jitsi-meet
    component: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: jitsi
  template:
    metadata:
      labels:
        component: jitsi
    spec:
      containers:
        - name: web
          image: jitsi/web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
