k8s architecture/k8s implementation with Ingress only/jitsi-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-ingress
  namespace: jitsi-meet
  labels:
    app: jitsi-ingress
spec:
  rules:
  - host: localhostke.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port: 
              number: 80
